--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .ant-layout-header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
-  background: #fff;
-  color: #fff;
+  background: transparent;
+  color: var(--bg-color-light);
   height: fit-content;
-  line-height: 80px;
+  line-height: 60px;
 }
 
 .logo {
@@ -15,7 +15,7 @@
   vertical-align: middle;
   display: flex;
   align-items: center;
-  height: 80px;
+  height: 60px;
 }
 
 .logo .logo__image {
@@ -38,15 +38,97 @@
 }
 
 .ant-layout-header ul.ant-menu-overflow {
+  justify-content: flex-end;
+  background: transparent;
+  border-bottom: transparent;
 }
 
 .ant-layout-header ul li.ant-menu-item-selected::after,
 .ant-layout-header ul li.ant-menu-item-active::after,
 .ant-layout-header ul li.ant-menu-overflow-item::after {
-  border-bottom-width: 0px !important;
-  border-bottom-color: #fff !important;
+  border-bottom-width: 5px !important;
+}
+
+.menu-login--transparent {
+  border-bottom-color: transparent !important;
+}
+
+.ant-layout-header ul li.ant-menu-item-active::after {
+  border-bottom-color: var(--bg-color-light) !important;
+}
+
+.ant-layout-header ul li.ant-menu-item-selected::after {
+  border-bottom-color: transparent !important;
+}
+
+.ant-menu-title-content {
+  font-size: 18px !important;
+  color: var(--bg-color-light) !important;
 }
 
 .ant-layout-header ul li.ant-menu-item-active {
-  color: var(--color-primary) !important;
+  color: #000 !important;
+}
+
+.menu__left {
+  order: -1;
+}
+
+.menu__right {
+  order: 1;
+}
+
+.ant-menu-item-group-title {
+  display: none;
+}
+
+.mega-menu {
+  /* transition: 0.01s linear, 0.6s cubic-bezier(0.86, 0, 0.12, 1); */
+  height: 50vh;
+  width: 100%;
+  left: 0;
+  /* top: 60px; */
+  background: var(--bg-color-light);
+  position: fixed;
+  z-index: 2;
+}
+
+.mega-menu.mega-menu--active {
+  animation: 1s cubic-bezier(0.4, 0, 0, 1) megaMenuTranslate forwards;
+  pointer-events: auto;
+  color: var(--color-primary);
+  opacity: 1;
+}
+
+.header__backdrop {
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(22, 20, 13, 0.8);
+  z-index: 1;
+  cursor: pointer;
+}
+
+@keyframes menuBannerFadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(1.15);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes megaMenuTranslate {
+  0% {
+    opacity: 1;
+    transform: translateY(60px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(90px);
+  }
 }
