--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .ant-layout-header {
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 2;
   width: 100%;
+  background: var(--color-primary);
   background: transparent;
   color: var(--bg-color-light);
-  height: fit-content;
-  line-height: 60px;
+  padding: 0 10em 0 8em;
 }
 
 .logo {
@@ -19,11 +19,9 @@
 }
 
 .logo .logo__image {
-  background-image: url("../../resources/logo/Bdiscom_srl.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 200px;
-  height: 35px;
+  background-image: url("../../resources/logo/logo.svg");
+  width: 400px;
+  height: 300px;
 }
 
 .login {
