--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,12 +1,8 @@
 .hero__image__background {
-  background-image: url("../../resources/header/pcb.jpg");
-  min-height: 80vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
+  object-fit: cover;
+  object-position: center;
   width: 100%;
+  height: 60vh;
   opacity: 0.8;
 }
 
