--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,26 +3,37 @@
   top: 0;
   z-index: 2;
   width: 100%;
-  background: var(--color-primary);
-  background: transparent;
   color: var(--bg-color-light);
-  padding: 0 10em 0 8em;
+  line-height: 100px;
+  height: 100px;
+  padding: 0 10em 0 10em;
+}
+
+.layout-header {
+  background: transparent;
+}
+
+.layout-header--active {
+  background-color: var(--bg-color-light);
+  transition: background-color 0.3s ease-in-out;
 }
 
 .logo {
   float: left;
   cursor: pointer;
   vertical-align: middle;
-  display: flex;
-  align-items: center;
-  height: 60px;
 }
 
-.logo .logo__image {
+.logo .ant-image {
+  display: flex;
+  height: 100px;
+}
+
+/* .logo .logo__image {
   background-image: url("../../resources/logo/logo.svg");
   width: 400px;
-  height: 300px;
-}
+  height: 200px;
+} */
 
 .login {
   float: right;
@@ -39,20 +50,26 @@
   justify-content: flex-end;
   background: transparent;
   border-bottom: transparent;
+  line-height: 100px;
+}
+
+.menu-login--transparent::after {
+  border-bottom-width: 0 !important;
 }
 
 .ant-layout-header ul li.ant-menu-item-selected::after,
 .ant-layout-header ul li.ant-menu-item-active::after,
 .ant-layout-header ul li.ant-menu-overflow-item::after {
   border-bottom-width: 5px !important;
-}
-
-.menu-login--transparent {
-  border-bottom-color: transparent !important;
+  margin-bottom: 20px;
 }
 
 .ant-layout-header ul li.ant-menu-item-active::after {
-  border-bottom-color: var(--bg-color-light) !important;
+  border-bottom-color: var(--color-light) !important;
+}
+
+.layout-header--active ul li.ant-menu-item-active::after {
+  border-bottom-color: var(--color-primary) !important;
 }
 
 .ant-layout-header ul li.ant-menu-item-selected::after {
@@ -62,6 +79,11 @@
 .ant-menu-title-content {
   font-size: 18px !important;
   color: var(--bg-color-light) !important;
+}
+
+.layout-header--active .ant-menu-title-content {
+  font-size: 18px !important;
+  color: var(--color-primary) !important;
 }
 
 .ant-layout-header ul li.ant-menu-item-active {
