V 1.0.7 - Add icon burgher menu and fix padding

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,7 @@
   color: var(--bg-color-light);
   line-height: 120px;
   height: 120px;
-  padding: 0 15em 0 15em;
+  /* padding: 0 15em 0 15em; */
 }
 
 .layout-header {
@@ -16,6 +16,7 @@
 .layout-header--active {
   background-color: var(--bg-color-light);
   transition: background-color 0.3s ease-in-out;
+  box-shadow: 0 2px 5px #444444;
 }
 
 .logo {
@@ -26,7 +27,13 @@
 
 .logo .ant-image {
   display: flex;
-  height: 100px;
+  height: 120px;
+}
+
+.mobile-burger-menu {
+  float: right;
+  cursor: pointer;
+  vertical-align: middle;
 }
 
 /* .logo .logo__image {
@@ -53,10 +60,6 @@
   line-height: 120px;
 }
 
-.menu-login--transparent::after {
-  border-bottom-color: transparent !important;
-}
-
 .ant-layout-header ul li.ant-menu-item-selected::after {
   border-bottom-color: transparent !important;
 }
@@ -76,10 +79,25 @@
   border-bottom-color: var(--color-primary) !important;
 }
 
+.menu-login {
+  margin-right: 2em;
+}
+
+.menu-login--transparent::after {
+  border-bottom: 0 !important;
+}
+
 .ant-menu-title-content {
+  font-family: Mundial-Bold !important;
   font-size: 18px !important;
   color: var(--bg-color-light) !important;
 }
+
+/* @media screen and (max-width: 1400px) {
+  .ant-menu-title-content {
+    font-size: 16px !important;
+  }
+} */
 
 .layout-header--active .ant-menu-title-content {
   font-size: 18px !important;
