V 1.0.8 -  Fix hero image , add login and signup

--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ div {
 }
 
 .ant-btn-primary {
-  background-color: var(--button-color-primary);
+  box-shadow: none;
 }
 
 .ant-btn-ghost {
@@ -115,7 +115,13 @@ div {
   color: var(--color-primary);
 }
 
+/** PADDING OR MARGIN **/
+.pt-150 {
+  padding-top: 150px;
+}
+
 /** ALIGN **/
+
 .d-flex {
   display: flex;
 }
