--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,8 +1,40 @@
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: url(../../resources/header/pcb01.jpg);
+  opacity: 0.8;
+
+  /* Set a specific height */
+  height: 80vh;
+  width: 100%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 70%;
+  transform: translate(-40%, -60%);
+  color: white;
+}
+
+.hero-text h1 {
+  font-size: 2em;
+}
+
 .hero__image__background {
   object-fit: cover;
   object-position: center;
+  background-image: url(../../resources/header/pcb01.jpg);
   width: 100%;
-  height: 60vh;
+  height: 80vh;
   opacity: 0.8;
 }
 
