--- a/src/index.css
+++ b/src/index.css
@@ -88,12 +88,34 @@ div {
 }
 
 /** PADDING OR MARGIN **/
+.mt-200 {
+  margin-top: 200px;
+}
+
+.mt-150 {
+  margin-top: 150px;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
 .pt-150 {
   padding-top: 150px;
 }
 
+.plr-100 {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
 .plr-200 {
-  padding: 0 200px 0 200px;
+  padding-left: 200px;
+  padding-right: 200px;
 }
 
 /** ALIGN **/
@@ -108,6 +130,10 @@ div {
 
 .justify-content-end {
   justify-content: end;
+}
+
+.align-items-start {
+  align-items: start;
 }
 
 .align-items-center {
