--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,22 @@ div {
   padding-right: 200px;
 }
 
+.pr-200 {
+  padding-right: 200px;
+}
+
+.pl-200 {
+  padding-left: 200px;
+}
+
+@media screen and (max-width: 992px) {
+  .plr-100,
+  .plr-200 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
 /** ALIGN **/
 
 .d-flex {
