V 1.0.14 - Add various section

--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,10 @@ div {
   justify-content: end;
 }
 
+.justify-content-space-between {
+  justify-content: space-between;
+}
+
 .align-items-start {
   align-items: start;
 }
