--- a/src/CustomLayout/CustomButton/CustomButton.css
+++ b/src/CustomLayout/CustomButton/CustomButton.css
@@ -36,3 +36,26 @@
 .button-login span {
   font-family: Mundial-Bold !important;
 }
+
+/** Secondary **/
+
+.ant-btn-secondary {
+  color: var(--button-color-primary);
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.ant-btn-secondary svg {
+  height: 100%;
+}
+
+.ant-btn-secondary span {
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: 0.16em;
+  text-transform: uppercase;
+  order: -1;
+  padding-right: 10px;
+}
