--- a/src/CustomLayout/CustomButton/CustomButton.css
+++ b/src/CustomLayout/CustomButton/CustomButton.css
@@ -59,3 +59,8 @@
   order: -1;
   padding-right: 10px;
 }
+
+.ant-btn-secondary:hover svg {
+  margin-left: 6px;
+  transition: margin-left 0.3s ease-in-out;
+}
