--- a/src/components/ProductsCard/ProductsCard.css
+++ b/src/components/ProductsCard/ProductsCard.css
@@ -3,18 +3,16 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  width: 446px;
-  height: 698px;
   z-index: 1;
-  /* border: 1px solid #000; */
+  overflow: hidden;
+  cursor: pointer;
 }
 .product__card__section {
-  padding: 2.2rem 2.2rem 0 2.2rem;
+  padding: 3.2rem 2.2rem 0 2.2rem;
   z-index: 3;
 }
 
 .product__card--title {
-  font-size: 2rem;
   font-weight: 500;
   line-height: 1.2;
   transition: color 0.5s 0.25s ease-in-out;
@@ -25,6 +23,21 @@
   height: 21rem;
 }
 
+.show-product-description__section--over {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--color-primary);
+  transform: translateY(0%);
+  transition: transform 0.5s ease, top 0.5s ease;
+  pointer-events: none;
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+}
+
 .show-product-description__section {
   position: absolute;
   width: 100%;
@@ -32,7 +45,19 @@
   top: 0;
   left: 0;
   background-color: var(--color-primary);
-  transform: translateX(0%, 100%);
-  transition: transform 1s ease, top 1s ease;
+  transform: translateY(100%);
+  transition: transform 0.5s ease, top 0.5s ease;
   pointer-events: none;
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
+}
+
+.show-product-description__section--description {
+  padding: 0 2.2rem 3.5rem 2.2rem;
+}
+
+.show-product-description__section--description p {
+  color: var(--color-light);
+  margin-bottom: 4.27778rem;
 }
