Modified path image

--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,6 +1,6 @@
 /* The hero image */
 .hero-image {
-  background-image: url(../../resources/header/pcb01.jpg);
+  background-image: url(../../resources/images/Header/HEA02.jpg);
   /* opacity: 0.8; */
 
   /* Set a specific height and width */
