--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -45,10 +45,10 @@
 }
 
 .ant-layout-header ul li span {
-  font-family: Mundial-Bold;
+  font-family: Raleway-Bold;
   /* text-transform: capitalize; */
   letter-spacing: 2px;
-  font-size: 17px;
+  font-size: 25px !important;
 }
 
 .ant-layout-header ul.ant-menu-overflow {
@@ -86,8 +86,8 @@
 }
 
 .ant-menu-title-content {
-  font-family: Mundial-Bold !important;
-  font-size: 18px !important;
+  font-family: Raleway-Bold !important;
+  font-size: 25px !important;
   color: var(--bg-color-light) !important;
 }
 
