--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer__section {
-  height: 600px;
+  height: 400px;
   background-color: var(--color-primary);
   padding: 2em 0 0 0;
   /* padding: 3em 10em 3em 10em; */
@@ -20,4 +20,11 @@
 
 .footer__selection--logo-white {
   width: 250px;
+}
+
+.footer_section__link {
+}
+
+.footer_section__link a {
+  color: var(--color-light);
 }
